Change baseurl for github pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: David Lester's Files
 description: >-
   An organized repository of some of David Lester's essays and studies.
-baseurl: ''
+baseurl: '/david-lester'
 url: 'https://andrewlester.github.io/david-lester/'
 github_username: jekyll
 
